--- a/ITI.ItSchool/ITI.ItSchool.csproj
+++ b/ITI.ItSchool/ITI.ItSchool.csproj
@@ -6680,11 +6680,16 @@
     <Compile Include="Controllers\DrawController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\TestInputController.cs" />
-    <Compile Include="ExerciseContextMigrations\201506161427233_Initial.cs" />
-    <Compile Include="ExerciseContextMigrations\201506161427233_Initial.Designer.cs">
-      <DependentUpon>201506161427233_Initial.cs</DependentUpon>
+    <Compile Include="ExerciseContextMigrations\201506162039503_Initial.cs" />
+    <Compile Include="ExerciseContextMigrations\201506162039503_Initial.Designer.cs">
+      <DependentUpon>201506162039503_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="ExerciseContextMigrations\Configuration.cs" />
+    <Compile Include="ExerciseDictationContextMigrations\201506162050019_Initial.cs" />
+    <Compile Include="ExerciseDictationContextMigrations\201506162050019_Initial.Designer.cs">
+      <DependentUpon>201506162050019_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ExerciseDictationContextMigrations\Configuration.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -6692,8 +6697,10 @@
     <Compile Include="Models\AvatarEntities\Foot.cs" />
     <Compile Include="Models\AvatarEntities\Legs.cs" />
     <Compile Include="Models\CardsData.cs" />
+    <Compile Include="Models\Contexts\ExerciseDictationContext.cs" />
     <Compile Include="Models\DictationText.cs" />
     <Compile Include="Models\LoginData.cs" />
+    <Compile Include="Models\PlugExercises\ExerciseDictation.cs" />
     <Compile Include="MyModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -6711,9 +6718,6 @@
     </Compile>
     <Compile Include="Models\Contexts\AvatarContext.cs" />
     <Compile Include="Models\AvatarEntities\Avatar.cs" />
-    <Compile Include="Models\Contexts\ChatContext.cs" />
-    <Compile Include="Models\ChatEntities\Conversation.cs" />
-    <Compile Include="Models\ChatEntities\Message.cs" />
     <Compile Include="Models\Contexts\ExerciseContext.cs" />
     <Compile Include="Models\ExerciseEntities\ExerciseType.cs" />
     <Compile Include="Models\ExerciseEntities\Exercise.cs" />
@@ -6721,22 +6725,27 @@
     <Compile Include="Models\IRepository.cs" />
     <Compile Include="Models\Contexts\SchoolContext.cs" />
     <Compile Include="Models\SchoolEntities\Chapter.cs" />
-    <Compile Include="Models\SchoolEntities\Grade.cs" />
+    <Compile Include="Models\SchoolEntities\Class.cs" />
     <Compile Include="Models\SchoolEntities\Matter.cs" />
     <Compile Include="Models\SchoolEntities\Theme.cs" />
-    <Compile Include="Models\Contexts\SocialNetworkContext.cs" />
-    <Compile Include="Models\SocialNetworkEntities\Friendship.cs" />
-    <Compile Include="Models\SocialNetworkEntities\Status.cs" />
     <Compile Include="Models\SQLRepository.cs" />
     <Compile Include="Models\Contexts\UserContext.cs" />
-    <Compile Include="Models\UserEntities\Belonging.cs" />
-    <Compile Include="Models\UserEntities\Control.cs" />
     <Compile Include="Models\UserEntities\Group.cs" />
     <Compile Include="Models\UserEntities\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SchoolContextMigrations\201506162026533_Initial.cs" />
+    <Compile Include="SchoolContextMigrations\201506162026533_Initial.Designer.cs">
+      <DependentUpon>201506162026533_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SchoolContextMigrations\Configuration.cs" />
     <Compile Include="User1.cs">
       <DependentUpon>MyModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="UserContextMigrations\201506162024076_Initial.cs" />
+    <Compile Include="UserContextMigrations\201506162024076_Initial.Designer.cs">
+      <DependentUpon>201506162024076_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserContextMigrations\Configuration.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -6772,8 +6781,17 @@
     <TypeScriptCompile Include="Scripts\collections.d.ts" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="ExerciseContextMigrations\201506161427233_Initial.resx">
-      <DependentUpon>201506161427233_Initial.cs</DependentUpon>
+    <EmbeddedResource Include="ExerciseContextMigrations\201506162039503_Initial.resx">
+      <DependentUpon>201506162039503_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ExerciseDictationContextMigrations\201506162050019_Initial.resx">
+      <DependentUpon>201506162050019_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SchoolContextMigrations\201506162026533_Initial.resx">
+      <DependentUpon>201506162026533_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserContextMigrations\201506162024076_Initial.resx">
+      <DependentUpon>201506162024076_Initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
