--- a/ITI.ItSchool/ITI.ItSchool.csproj
+++ b/ITI.ItSchool/ITI.ItSchool.csproj
@@ -6620,16 +6620,22 @@
     <Content Include="Scripts\interact-1.2.4.js" />
     <Content Include="Scripts\interact-1.2.4.min.js" />
     <None Include="Scripts\jquery-2.1.3.intellisense.js" />
+    <Content Include="Scripts\jquery-1.11.0.min.js" />
     <Content Include="Scripts\jquery-2.1.3.js" />
     <Content Include="Scripts\jquery-2.1.3.min.js" />
     <Content Include="Scripts\jsHtml5AudioRecorder.js" />
+    <Content Include="Scripts\libmp3lame.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\mp3Worker.js" />
     <Content Include="Scripts\ng-polymer-elements.js" />
     <Content Include="Scripts\painting.js" />
     <Content Include="Scripts\ng-polymer-elements.min.js" />
     <Content Include="Scripts\NG-Polymer.js" />
     <Content Include="Scripts\PairOuImpair.js" />
+    <Content Include="Scripts\recorderWorker.js" />
+    <Content Include="Scripts\recordmp3.js" />
     <Content Include="Scripts\Routing.js" />
+    <Content Include="Templates\style.css" />
     <Content Include="Scripts\version.txt" />
     <Content Include="Templates\Error.html" />
     <Content Include="Templates\home.html" />
@@ -6647,6 +6653,7 @@
     <Content Include="Templates\TeacherLoginPage.html" />
     <Content Include="Templates\TeacherRegistrationPage.html" />
     <Content Include="Templates\TeacherSelectExercicesPage.html" />
+    <Content Include="Templates\voiceRecorder.html" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -6671,6 +6678,10 @@
     <Compile Include="ExerciseDictationContextMigrations\201506162050019_Initial.cs" />
     <Compile Include="ExerciseDictationContextMigrations\201506162050019_Initial.Designer.cs">
       <DependentUpon>201506162050019_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ExerciseDictationContextMigrations\201506221417440_UpdateWithUsers.cs" />
+    <Compile Include="ExerciseDictationContextMigrations\201506221417440_UpdateWithUsers.Designer.cs">
+      <DependentUpon>201506221417440_UpdateWithUsers.cs</DependentUpon>
     </Compile>
     <Compile Include="ExerciseDictationContextMigrations\Configuration.cs" />
     <Compile Include="Global.asax.cs">
@@ -6757,6 +6768,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ExerciseDictationContextMigrations\201506162050019_Initial.resx">
       <DependentUpon>201506162050019_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ExerciseDictationContextMigrations\201506221417440_UpdateWithUsers.resx">
+      <DependentUpon>201506221417440_UpdateWithUsers.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SchoolContextMigrations\201506162026533_Initial.resx">
       <DependentUpon>201506162026533_Initial.cs</DependentUpon>
