--- a/ITI.ItSchool/ITI.ItSchool.csproj
+++ b/ITI.ItSchool/ITI.ItSchool.csproj
@@ -6669,19 +6669,19 @@
     <Compile Include="ExerciseClozeContextMigrations\201506162116288_Initial.Designer.cs">
       <DependentUpon>201506162116288_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="ExerciseClozeContextMigrations\201506241407333_UpdatedId.cs" />
+    <Compile Include="ExerciseClozeContextMigrations\201506241407333_UpdatedId.Designer.cs">
+      <DependentUpon>201506241407333_UpdatedId.cs</DependentUpon>
+    </Compile>
     <Compile Include="ExerciseClozeContextMigrations\Configuration.cs" />
-    <Compile Include="ExerciseContextMigrations\201506162039503_Initial.cs" />
-    <Compile Include="ExerciseContextMigrations\201506162039503_Initial.Designer.cs">
-      <DependentUpon>201506162039503_Initial.cs</DependentUpon>
+    <Compile Include="ExerciseContextMigrations\201506241326573_Initial.cs" />
+    <Compile Include="ExerciseContextMigrations\201506241326573_Initial.Designer.cs">
+      <DependentUpon>201506241326573_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="ExerciseContextMigrations\Configuration.cs" />
-    <Compile Include="ExerciseDictationContextMigrations\201506162050019_Initial.cs" />
-    <Compile Include="ExerciseDictationContextMigrations\201506162050019_Initial.Designer.cs">
-      <DependentUpon>201506162050019_Initial.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ExerciseDictationContextMigrations\201506222016023_InitialPlusUsers.cs" />
-    <Compile Include="ExerciseDictationContextMigrations\201506222016023_InitialPlusUsers.Designer.cs">
-      <DependentUpon>201506222016023_InitialPlusUsers.cs</DependentUpon>
+    <Compile Include="ExerciseDictationContextMigrations\201506241357343_Initial.cs" />
+    <Compile Include="ExerciseDictationContextMigrations\201506241357343_Initial.Designer.cs">
+      <DependentUpon>201506241357343_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="ExerciseDictationContextMigrations\Configuration.cs" />
     <Compile Include="Global.asax.cs">
@@ -6694,6 +6694,7 @@
     <Compile Include="Models\Contexts\ExerciseClozeContext.cs" />
     <Compile Include="Models\Contexts\ExerciseDictationContext.cs" />
     <Compile Include="Models\DictationText.cs" />
+    <Compile Include="Models\ExerciseEntities\ExerciseAffection.cs" />
     <Compile Include="Models\LoginData.cs" />
     <Compile Include="Models\PlugExercises\ExerciseCloze.cs" />
     <Compile Include="Models\PlugExercises\ExerciseDictation.cs" />
@@ -6714,9 +6715,9 @@
     <Compile Include="Models\UserEntities\Group.cs" />
     <Compile Include="Models\UserEntities\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SchoolContextMigrations\201506162026533_Initial.cs" />
-    <Compile Include="SchoolContextMigrations\201506162026533_Initial.Designer.cs">
-      <DependentUpon>201506162026533_Initial.cs</DependentUpon>
+    <Compile Include="SchoolContextMigrations\201506241345098_Initial.cs" />
+    <Compile Include="SchoolContextMigrations\201506241345098_Initial.Designer.cs">
+      <DependentUpon>201506241345098_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="SchoolContextMigrations\Configuration.cs" />
     <Compile Include="UserContextMigrations\201506162024076_Initial.cs" />
@@ -6763,17 +6764,17 @@
     <EmbeddedResource Include="ExerciseClozeContextMigrations\201506162116288_Initial.resx">
       <DependentUpon>201506162116288_Initial.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ExerciseContextMigrations\201506162039503_Initial.resx">
-      <DependentUpon>201506162039503_Initial.cs</DependentUpon>
+    <EmbeddedResource Include="ExerciseClozeContextMigrations\201506241407333_UpdatedId.resx">
+      <DependentUpon>201506241407333_UpdatedId.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ExerciseDictationContextMigrations\201506162050019_Initial.resx">
-      <DependentUpon>201506162050019_Initial.cs</DependentUpon>
+    <EmbeddedResource Include="ExerciseContextMigrations\201506241326573_Initial.resx">
+      <DependentUpon>201506241326573_Initial.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ExerciseDictationContextMigrations\201506222016023_InitialPlusUsers.resx">
-      <DependentUpon>201506222016023_InitialPlusUsers.cs</DependentUpon>
+    <EmbeddedResource Include="ExerciseDictationContextMigrations\201506241357343_Initial.resx">
+      <DependentUpon>201506241357343_Initial.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="SchoolContextMigrations\201506162026533_Initial.resx">
-      <DependentUpon>201506162026533_Initial.cs</DependentUpon>
+    <EmbeddedResource Include="SchoolContextMigrations\201506241345098_Initial.resx">
+      <DependentUpon>201506241345098_Initial.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserContextMigrations\201506162024076_Initial.resx">
       <DependentUpon>201506162024076_Initial.cs</DependentUpon>
