--- a/ITI.ItSchool/ITI.ItSchool.csproj
+++ b/ITI.ItSchool/ITI.ItSchool.csproj
@@ -3738,6 +3738,7 @@
     <Content Include="Images\material-design-icons\navigation\svg\production\ic_unfold_more_24px.svg" />
     <Content Include="Images\material-design-icons\navigation\svg\production\ic_unfold_more_36px.svg" />
     <Content Include="Images\material-design-icons\navigation\svg\production\ic_unfold_more_48px.svg" />
+    <Content Include="Images\redCard.svg" />
     <Content Include="Scripts\angular-animate.js" />
     <Content Include="Scripts\angular-animate.min.js" />
     <Content Include="Scripts\angular-aria.js" />
@@ -6654,6 +6655,7 @@
     <Content Include="Templates\KidLoginPage.html" />
     <Content Include="Templates\KidRegistrationPage.html" />
     <Content Include="Templates\TeacherCustomizeBattleCardPage.html" />
+    <Content Include="Templates\TeacherCustomizeClozeExercisePage.html" />
     <Content Include="Templates\TeacherDescriptionBattleCardPage.html" />
     <Content Include="Templates\TeacherCustomizeDictationPage.html" />
     <Content Include="Templates\TeacherCustomizeDragAndDropPage.html" />
@@ -6675,9 +6677,6 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\TestInputController.cs" />
     <Compile Include="ExerciseBattleCardContextMigrations\201506191648164_Initial.cs" />
-    <Compile Include="ExerciseBattleCardContextMigrations\201506191648164_Initial.Designer.cs">
-      <DependentUpon>201506191648164_Initial.cs</DependentUpon>
-    </Compile>
     <Compile Include="ExerciseBattleCardContextMigrations\Configuration.cs" />
     <Compile Include="ExerciseClozeContextMigrations\201506162116288_Initial.cs" />
     <Compile Include="ExerciseClozeContextMigrations\201506162116288_Initial.Designer.cs">
@@ -6696,10 +6695,6 @@
     <Compile Include="ExerciseContextMigrations\201506241523339_RenamingCorrectlyAffectation.Designer.cs">
       <DependentUpon>201506241523339_RenamingCorrectlyAffectation.cs</DependentUpon>
     </Compile>
-    <Compile Include="ExerciseContextMigrations\201506241439338_AddExerciseAffectation.cs" />
-    <Compile Include="ExerciseContextMigrations\201506241439338_AddExerciseAffectation.Designer.cs">
-      <DependentUpon>201506241439338_AddExerciseAffectation.cs</DependentUpon>
-    </Compile>
     <Compile Include="ExerciseContextMigrations\Configuration.cs" />
     <Compile Include="ExerciseDictationContextMigrations\201506241357343_Initial.cs" />
     <Compile Include="ExerciseDictationContextMigrations\201506241357343_Initial.Designer.cs">
@@ -6713,12 +6708,11 @@
     <Compile Include="Models\AvatarEntities\Foot.cs" />
     <Compile Include="Models\AvatarEntities\Legs.cs" />
     <Compile Include="Models\CardsData.cs" />
-    <Compile Include="Models\ExerciseEntities\ExerciseAffectation.cs" />
     <Compile Include="Models\Contexts\ExerciseBattleCardContext.cs" />
     <Compile Include="Models\Contexts\ExerciseClozeContext.cs" />
     <Compile Include="Models\Contexts\ExerciseDictationContext.cs" />
     <Compile Include="Models\DictationText.cs" />
-    <Compile Include="Models\ExerciseEntities\ExerciseAffection.cs" />
+    <Compile Include="Models\ExerciseEntities\ExerciseAffectation.cs" />
     <Compile Include="Models\LoginData.cs" />
     <Compile Include="Models\PlugExercises\ExerciseBattleCard.cs" />
     <Compile Include="Models\PlugExercises\ExerciseCloze.cs" />
@@ -6786,17 +6780,11 @@
     <TypeScriptCompile Include="Scripts\collections.d.ts" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="ExerciseBattleCardContextMigrations\201506191648164_Initial.resx">
-      <DependentUpon>201506191648164_Initial.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="ExerciseClozeContextMigrations\201506162116288_Initial.resx">
       <DependentUpon>201506162116288_Initial.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ExerciseClozeContextMigrations\201506241407333_UpdatedId.resx">
       <DependentUpon>201506241407333_UpdatedId.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ExerciseContextMigrations\201506241439338_AddExerciseAffectation.resx">
-      <DependentUpon>201506241439338_AddExerciseAffectation.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ExerciseContextMigrations\201506241326573_Initial.resx">
       <DependentUpon>201506241326573_Initial.cs</DependentUpon>
